# iresearch

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  CNAME  README.md  THIRD_PARTY_README.md  appveyor.yml  build.bash  tsan_suppressions
.github/workflows/: format.yml
benchmark/: CMakeLists.txt  benchmark_main.cpp
benchmarks/: CMakeLists.txt  build.sh  index-put.cpp  index-search.cpp
cmake/: AddCompilerFlag.cmake  CheckCCompilerFlag.cmake  CheckCXXCompilerFlag.cmake  CheckMicCCompilerFlag.cmake  CheckMicCXXCompilerFlag.cmake  CodeCoverage.cmake  Coverage.cmake  EnableWarnings.cmake  FindASan.cmake  FindBFD.cmake  FindFasttext.cmake  FindGTestLocal.cmake  FindICU.cmake  FindLz4.cmake  FindMSan.cmake  FindS2.cmake  FindSanitizers.cmake  FindSnowball.cmake  FindTSan.cmake  FindUBSan.cmake  FindUnwind.cmake  FindUring.cmake  OptimizeForArchitecture.cmake  OptimizeForArchitectureLocal.cmake  PVS-Studio.cmake  SanitizeUndefined.cmake  UpdateModule.cmake  Utils.cmake  sanitize-helpers.cmake
core/: CMakeLists.txt  hash_set_utils.hpp  resource_manager.hpp  shared.hpp  types.hpp
core/analysis/: analyzer.cpp  analyzer.hpp  analyzers.cpp  analyzers.hpp  classification_stream.cpp  classification_stream.hpp  collation_token_stream.cpp  collation_token_stream.hpp  collation_token_stream_encoder.hpp  delimited_token_stream.cpp  delimited_token_stream.hpp  embedding_classification_stream.cpp  embedding_classification_stream.hpp  fasttext_model_provider.hpp  geo_token_stream.cpp  geo_token_stream.hpp  minhash_token_stream.cpp  minhash_token_stream.hpp  multi_delimited_token_stream.cpp  multi_delimited_token_stream.hpp  nearest_neighbors_stream.cpp  nearest_neighbors_stream.hpp  ngram_token_stream.cpp  ngram_token_stream.hpp  pipeline_token_stream.cpp  pipeline_token_stream.hpp  segmentation_token_stream.cpp  segmentation_token_stream.hpp  text_token_normalizing_stream.cpp  text_token_normalizing_stream.hpp  text_token_stemming_stream.cpp  text_token_stemming_stream.hpp  text_token_stream.cpp  text_token_stream.hpp  token_attributes.cpp  token_attributes.hpp  token_masking_stream.cpp  token_masking_stream.hpp  token_stopwords_stream.cpp  token_stopwords_stream.hpp  (+4 more)
core/document/: field.cpp  field.hpp  serializer.cpp  serializer.hpp
core/error/: error.cpp  error.hpp
core/formats/: columnstore.cpp  columnstore.hpp  columnstore2.cpp  columnstore2.hpp  empty_term_reader.hpp  format_compress.cpp  format_compress.hpp  format_utils.cpp  format_utils.hpp  formats.cpp  formats.hpp  formats_10.cpp  formats_10.hpp  formats_10_attributes.cpp  formats_10_attributes.hpp  formats_10_optimized.cpp  formats_10_optimized.hpp  formats_burst_trie.cpp  formats_burst_trie.hpp  seek_cookie.hpp  skip_list.cpp  skip_list.hpp  sparse_bitmap.cpp  sparse_bitmap.hpp  wand_writer.hpp
core/index/: buffered_column.cpp  buffered_column.hpp  buffered_column_iterator.hpp  column_info.hpp  comparer.hpp  composite_reader_impl.hpp  directory_reader.cpp  directory_reader.hpp  directory_reader_impl.cpp  directory_reader_impl.hpp  doc_header.hpp  field_data.cpp  field_data.hpp  field_meta.cpp  field_meta.hpp  file_names.cpp  file_names.hpp  heap_iterator.hpp  index_features.hpp  index_meta.cpp  index_meta.hpp  index_reader.cpp  index_reader.hpp  index_reader_options.hpp  index_writer.cpp  index_writer.hpp  iterators.cpp  iterators.hpp  merge_writer.cpp  merge_writer.hpp  norm.cpp  norm.hpp  postings.cpp  postings.hpp  segment_reader.cpp  segment_reader.hpp  segment_reader_impl.cpp  segment_reader_impl.hpp  segment_writer.cpp  segment_writer.hpp  (+5 more)
core/iql/: parser.yy  parser_common.cpp  parser_common.hpp  parser_context.cpp  parser_context.hpp  query_builder.cpp  query_builder.hpp
core/search/: all_docs_provider.cpp  all_docs_provider.hpp  all_filter.cpp  all_filter.hpp  all_iterator.cpp  all_iterator.hpp  all_terms_collector.hpp  bitset_doc_iterator.cpp  bitset_doc_iterator.hpp  bm25.cpp  bm25.hpp  boolean_filter.cpp  boolean_filter.hpp  boolean_query.cpp  boolean_query.hpp  boost_scorer.cpp  boost_scorer.hpp  boost_sort.cpp  boost_sort.hpp  collector.cpp  collector.hpp  collectors.cpp  collectors.hpp  column_existence_filter.cpp  column_existence_filter.hpp  common_filter_visitors.cpp  common_filter_visitors.hpp  conjunction.hpp  cost.cpp  cost.hpp  disjunction.hpp  exclusion.hpp  filter.cpp  filter.hpp  filter_visitor.hpp  geo_filter.cpp  geo_filter.hpp  granular_range_filter.cpp  granular_range_filter.hpp  levenshtein_filter.cpp  (+66 more)
core/store/: async_directory.cpp  async_directory.hpp  caching_directory.hpp  checksum_io.hpp  data_input.cpp  data_input.hpp  data_output.cpp  data_output.hpp  directory.cpp  directory.hpp  directory_attributes.cpp  directory_attributes.hpp  directory_cleaner.cpp  directory_cleaner.hpp  fs_directory.cpp  fs_directory.hpp  memory_directory.cpp  memory_directory.hpp  mmap_directory.cpp  mmap_directory.hpp  store_avg_utils.hpp  store_utils.cpp  store_utils.hpp  store_utils_optimized.cpp  store_utils_optimized.hpp  store_utils_simd.cpp  store_utils_simd.hpp
core/utils/: arena_allocator.hpp  assert.cpp  assert.hpp  async_utils.cpp  async_utils.hpp  attribute_helper.hpp  crc.hpp  (+141 more)
index-util/: CMakeLists.txt  main.cpp
microbench/: CMakeLists.txt  column_writer_benchmark.cpp  crc_benchmark.cpp  hash_map_benchmark.cpp  kwaymerge.cpp  lower_bound_benchmark.cpp  memory_file_benchmark.cpp  segmentation_stream_benchmark.cpp  simd_utils_benchmark.cpp  top_term_collector_benchmark.cpp
python/: CMakeLists.txt  pyresearch.cpp  pyresearch.h  pyresearch.hpp
scripts/: PythonBenchmark.py  download-benchmark-resources.sh
shit/: .clang-format  coverage.yml
tests/: CMakeLists.txt  json_parser.hpp  tests_config.hpp.in  tests_main.cpp  tests_param.cpp  tests_param.hpp  tests_shared.hpp  tests_utils.hpp
utils/: CMakeLists.txt  bytes_output.hpp  common.cpp  common.hpp  index-benchmarks.cpp  index-convert.cpp  index-convert.hpp  index-dump.cpp  index-dump.hpp  index-put.cpp  index-put.hpp  index-search.cpp  index-search.hpp  index-util.cpp  main.cpp  pdd.cpp
(+193 files in other folders)
